Fix French error messages in login and register forms

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,7 @@
                   <small class="form-text text-danger">L'email est obligatoire</small>
                 }
                 @else if(registerForm.get('email')?.hasError('email')){
-                  <small class="form-text text-danger">L'email invalide</small>
+                  <small class="form-text text-danger">L'adresse email est invalide</small>
                 }
               }
             </div>
