--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,10 +17,10 @@
           <div>
             @if(loginForm.get('email')?.invalid && loginForm.get('email')?.errors && loginForm.get('email')?.dirty || loginForm.get('email')?.touched){
               @if(loginForm.get('email')?.hasError('required')){
-                <small class="form-text text-danger">L'mail est obligatoire</small>
+                <small class="form-text text-danger">L'email est obligatoire</small>
               }
               @else if(loginForm.get('email')?.hasError('email')){
-                <small class="form-text text-danger">L'email invalide</small>
+                <small class="form-text text-danger">L'adresse email est invalide</small>
               }
             }
           </div>
