--- a/src/app/table-products/table-products.component.html
+++ b/src/app/table-products/table-products.component.html
@@ -1,1 +1,29 @@
-<p>table-products works!</p>
+<div class="row justify-content-center">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prix</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (product of products; track product.id; let i = $index) {
+                <tr>
+                    <th scope="row">{{ i + 1 }}</th>
+                    <!--<td>
+                        <img
+                            [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
+                            [alt]="'The flag of ' + country.name"
+                            class="me-2"
+                            style="width: 20px"
+                        />
+                        {{ country.name }}
+                    </td>-->
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.price }}</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
