--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -27,7 +27,7 @@
                     <td>{{ product.name }}</td>
                     <td>{{ product.price }} €</td>
                     <td class="text-end">
-                        <button class="btn btn-warning me-2" 
+                        <button class="btn btn-primary me-2" 
                             [routerLink]="['/products/edit', product.id]"
                         >
                             Voir
