--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <h2>Modifier le produit</h2>
+    @if (product) {
+        <h2>Modifier le produit {{ product.name }}</h2>
+    }
+    @else {
+        <h2>Ajouter un produit</h2>
+    }
     <form>
         <div class="mb-3">
             <label for="name" class="form-label">Nom</label>
