--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -1,7 +1,9 @@
 <div class="row justify-content-center">
     <h1>Table des produits</h1>
     <div class="text-end">
-        <button class="btn btn-success">Ajouter un produit</button>
+        <button class="btn btn-success"  
+            [routerLink]="['/products/edit']"
+        >Ajouter un produit</button>
     </div>
     <table class="table table-striped">
         <thead>
@@ -28,7 +30,7 @@
                     <td>{{ product.price }} €</td>
                     <td class="text-end">
                         <button class="btn btn-primary me-2" 
-                            [routerLink]="['/products/edit', product.id]"
+                            [routerLink]="['/products/view', product.id]"
                         >
                             Voir
                         </button>
