--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -1,29 +1,74 @@
-<div class="container">
-    @if (product) {
-        <h2>Modifier le produit {{ product.name }}</h2>
-    }
-    @else {
-        <h2>Ajouter un produit</h2>
-    }
-    <form>
-        <div class="mb-3">
-            <label for="name" class="form-label">Nom</label>
-            <input
-            type="text"
-            id="name"
-            class="form-control"
-            name="name"
-            />
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow my-5">
+            <form #productForm="ngForm"  (ngSubmit)="saveProduct(productForm)">
+                @if (product) {
+                    <h4 class="card-header">Modifier le produit {{ product.name }}</h4>
+                }
+                @else {
+                    <h4 class="card-header">Ajouter un produit</h4>
+                }
+                <div class="card-body">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Nom de l'article</label>
+                        <input
+                        [(ngModel)]="product.name"
+                        type="text"
+                        id="name"
+                        class="form-control"
+                        name="name"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Description de l'article</label>
+                        <input
+                        [(ngModel)]="product.description"
+                        type="text"
+                        id="description"
+                        class="form-control"
+                        name="description"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="price" class="form-label">Prix de l'article</label>
+                        <input
+                        [(ngModel)]="product.price"
+                            type="number"
+                            id="price"
+                            class="form-control"
+                            name="price"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <label for="image" class="form-label">Photo de l'article</label>
+                        <input
+                            type="file"
+                            id="image"
+                            class="form-control"
+                            (change)="onFileSelected($event)"
+                        />
+                    </div>
+                    <div *ngIf="product.image" class="mt-3">
+                        <h6>Image actuelle :</h6>
+                        <img
+                            [src]="'data:image/jpeg;base64,' + product.image"
+                            alt="Image du produit"
+                            class="img-thumbnail"
+                            style="max-width: 200px;"
+                        />
+                    </div>
+                </div>
+                
+                
+                <div class="card-footer">
+                    <button 
+                        type="submit" 
+                        class="btn btn-primary"
+                    >
+                        Enregistrer
+                    </button>
+                </div>
+            </form>
         </div>
-        <div class="mb-3">
-            <label for="price" class="form-label">Prix</label>
-            <input
-            type="number"
-            id="price"
-            class="form-control"
-            name="price"
-            />
-        </div>
-        <button type="submit" class="btn btn-success">Enregistrer</button>
-    </form>
+    </div>
 </div>
