--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -3,14 +3,14 @@
         <div class="card shadow my-5">
             <form #productForm="ngForm"  (ngSubmit)="saveProduct(productForm)">
                 @if (product) {
-                    <h4 class="card-header">Modifier le produit {{ product.name }}</h4>
+                    <h4 class="card-header">Modification de l'article</h4>
                 }
                 @else {
                     <h4 class="card-header">Ajouter un produit</h4>
                 }
                 <div class="card-body">
                     <div class="mb-3">
-                        <label for="name" class="form-label">Nom de l'article</label>
+                        <b><label for="name" class="form-label">Nom de l'article :</label></b>
                         <input
                         [(ngModel)]="product.name"
                         type="text"
@@ -20,7 +20,7 @@
                         />
                     </div>
                     <div class="mb-3">
-                        <label for="description" class="form-label">Description de l'article</label>
+                        <b><label for="description" class="form-label">Description de l'article :</label></b>
                         <input
                         [(ngModel)]="product.description"
                         type="text"
@@ -30,7 +30,7 @@
                         />
                     </div>
                     <div class="mb-3">
-                        <label for="price" class="form-label">Prix de l'article</label>
+                        <b><label for="price" class="form-label">Prix de l'article :</label></b>
                         <input
                         [(ngModel)]="product.price"
                             type="number"
@@ -40,7 +40,7 @@
                         />
                     </div>
                     <div class="mb-3">
-                        <label for="image" class="form-label">Photo de l'article</label>
+                        <b><label for="image" class="form-label">Photo de l'article :</label></b>
                         <input
                             type="file"
                             id="image"
@@ -48,10 +48,10 @@
                             (change)="onFileSelected($event)"
                         />
                     </div>
-                    <div *ngIf="product.image" class="mt-3">
-                        <h6>Image actuelle :</h6>
+                    <div *ngIf="product.image " class="mt-3">
+                        <b><p>photo :</p></b>
                         <img
-                            [src]="'data:image/jpeg;base64,' + product.image"
+                            [src]="product.image"
                             alt="Image du produit"
                             class="img-thumbnail"
                             style="max-width: 200px;"
@@ -59,8 +59,10 @@
                     </div>
                 </div>
                 
-                
-                <div class="card-footer">
+                <div class="card-footer d-flex justify-content-between">
+                    <button [routerLink]="['/products']" class="btn btn-secondary">
+                        Retour
+                    </button>
                     <button 
                         type="submit" 
                         class="btn btn-primary"
