--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -45,14 +45,13 @@
             </div>
         </div>
         <div class="card-footer">
-          <button
+          <p-button
           [disabled]="loginForm.invalid"
           type="submit"
-          class="btn btn-primary"
           name="btn"
-        >
-          Se connecter
-          </button>
+          label ="Se connecter"
+          severity="primary"
+        />
         </div>
       </form>
     </div>
