--- a/src/app/login/components/register/register.component.html
+++ b/src/app/login/components/register/register.component.html
@@ -102,13 +102,15 @@
           </div>
         </div>
         <div class="card-footer">
-          <p-button
+          <button
             [disabled]="registerForm.invalid"
             type="submit"
             name="btn"
             label="Créer un compte"
-            severity="primary"
-          />
+            class="btn btn-outline-success"
+          >
+          Créer un compte
+          </button>
         </div>
       </form>
     </div>
