--- a/src/app/shared/components/navbar-private/navbar-private.component.html
+++ b/src/app/shared/components/navbar-private/navbar-private.component.html
@@ -20,5 +20,8 @@
           <a class="nav-link" href="/products">Produits</a>
         </li>
       </ul>
+      <button class="btn btn-outline-secondary ms-auto me-2" (click)="logout()">
+        Déconnexion
+      </button>
     </div>
   </nav>
