--- a/src/app/authentication/components/register/register.component.html
+++ b/src/app/authentication/components/register/register.component.html
@@ -94,8 +94,8 @@
               <label for="role">Rôle</label>
 
               <select formControlName="role" class="form-control border">
-                  <option value="user">Artisan</option>
-                  <option value="customer">Client</option>
+                  <option value="Artisan">Artisan</option>
+                  <option value="Customer">Client</option>
                   <option value="Administrator">Administrateur</option>
                   <option value="DeliveryPartner">Partenaire de livraison</option>
               </select>
