--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -7,7 +7,7 @@
                     <h4 class="card-header">Modification de l'article</h4>
                 }
                 @else {
-                    <h4 class="card-header">Ajouter un produit</h4>
+                    <h4 class="card-header">Ajouter un article</h4>
                 }
                 <div class="card-body">
                     <div class="mb-3">
@@ -53,7 +53,7 @@
                         <b><p>photo :</p></b>
                         <img
                             [src]="product.image"
-                            alt="Image du produit"
+                            alt="Image de l'article"
                             class="img-thumbnail"
                             style="max-width: 200px;"
                         />
