--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -20,7 +20,7 @@
                     <h6>photo :</h6>
                     <img
                         [src]="product.image"
-                        alt="Image du produit"
+                        alt="Image de l'article"
                         class="img-thumbnail"
                         style="max-width: 200px;"
                     />
