--- a/src/app/shared/components/navbar-public/navbar-public.component.html
+++ b/src/app/shared/components/navbar-public/navbar-public.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Art'Online</a>
+  <a class="navbar-brand ml-3" href="#">Art'Online</a>
   <button
     class="navbar-toggler"
     type="button"
