--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -1,9 +1,9 @@
 <div class="row justify-content-center">
-    <h1>Table des produits</h1>
+    <h1>Articles en vente</h1>
     <div class="text-end">
-        <button class="btn btn-outline-success"  
+        <button *ngIf="showAddButton()" class="btn btn-outline-success"  
             [routerLink]="['/products/edit']"
-        >Ajouter un produit</button>
+        >Ajouter un article</button>
     </div>
     <table class="table table-striped">
         <thead>
@@ -33,12 +33,20 @@
                         >
                             Voir
                         </button>
-                        <button class="btn btn-outline-secondary me-2" 
+                        <button 
+                            class="btn btn-outline-secondary me-2" 
                             [routerLink]="['/products/edit', product.id]"
+                            *ngIf="showEditButton()"
                         >
                             Modifier
                         </button>
-                        <button class="btn btn-outline-danger">Supprimer</button>
+                        <button 
+                            class="btn btn-outline-danger"
+                            *ngIf="showDeleteButton()"
+                            (click)="deleteProduct(product.id)"
+                        >
+                            Supprimer
+                        </button>
                     </td>
                 </tr>
             }
