--- a/src/app/shared/components/navbar-private/navbar-private.component.html
+++ b/src/app/shared/components/navbar-private/navbar-private.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="#">Accueil</a>
         </li>
         <li *ngIf="showProducts()" class="nav-item">
-          <a class="nav-link" href="/products">articles</a>
+          <a class="nav-link" href="/products">Articles</a>
         </li>
         <li *ngIf="showUsers()" class="nav-item">
           <a class="nav-link" href="/users">Utilisateurs</a>
