--- a/src/app/users/components/table-users/table-users.component.html
+++ b/src/app/users/components/table-users/table-users.component.html
@@ -5,6 +5,9 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Email</th>
+                <th scope="col">Prénom</th>
+                <th scope="col">Nom</th>
+                <th scope="col" class="text-end"></th>
            
             </tr>
         </thead>
@@ -15,6 +18,8 @@
                     <td >
                         {{ user.email }}
                     </td>
+                    <td></td>
+                    <td></td>
                     <td class="text-end">
                         <button class="btn btn-outline-secondary me-2" 
                         >
