--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar-wrapper></app-navbar-wrapper>
 
-<div class="container">
+<div class="container" style="margin-top: 20px;">
   <router-outlet />
 </div>
