--- a/src/app/users/components/table-users/table-users.component.html
+++ b/src/app/users/components/table-users/table-users.component.html
@@ -1,12 +1,13 @@
 <div class="row justify-content-center">
+    <p-toast />
     <h1>Utilisateurs</h1>
     <table class="table table-striped">
         <thead>
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Email</th>
-                <th scope="col">Prénom</th>
                 <th scope="col">Nom</th>
+                <th scope="col">Prénom</th>
                 <th scope="col" class="text-end"></th>
            
             </tr>
@@ -18,20 +19,12 @@
                     <td >
                         {{ user.email }}
                     </td>
-                    <td></td>
-                    <td></td>
+                    <td>{{ user.firstname }}</td>
+                    <td>{{ user.lastname }}</td>
                     <td class="text-end">
-                        <button class="btn btn-outline-secondary me-2" 
-                        >
-                            Voir
-                        </button>
-                        <button 
-                            class="btn btn-outline-secondary me-2" 
-                        >
-                            Modifier
-                        </button>
                         <button 
                             class="btn btn-outline-danger"
+                            (click)="deleteUser(user.id)"
                         >
                             Supprimer
                         </button>
