--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -1,1 +1,33 @@
-<p>edit-invoice works!</p>
+<div class="row justify-content-center">
+    <p-toast />
+    <div class="col-md-6">
+        <div class="card shadow my-5">
+            <form #invoiceForm="ngForm"  (ngSubmit)="saveInvoice(invoiceForm)">
+                <h4 class="card-header">Modification de la commande</h4>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <b><label for="description" class="form-label">Description de l'article :</label></b>
+                        <input
+                        type="text"
+                        id="description"
+                        class="form-control"
+                        name="description"
+                        />
+                    </div>
+                </div>
+                
+                <div class="card-footer d-flex justify-content-between">
+                    <button class="btn btn-secondary">
+                        Retour
+                    </button>
+                    <button 
+                        type="submit" 
+                        class="btn btn-primary"
+                    >
+                        Enregistrer
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
