--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -1,9 +1,8 @@
 <div class="row justify-content-center">
-    <p-toast />
     <div class="col-md-6">
         <div class="card shadow my-5">
             <form #invoiceForm="ngForm"  (ngSubmit)="saveInvoice(invoiceForm)">
-                <h4 class="card-header">Modification de la commande</h4>
+                <h4 class="card-header">Modification du panier</h4>
                 <div class="card-body">
                     <div class="mb-3">
                         <b><label for="description" class="form-label">Description de l'article :</label></b>
