--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-navbar-wrapper  [numberCart]="cartCount"></app-navbar-wrapper>
-
-<div class="container" style="margin-top: 20px;">
-  <router-outlet (activate)="onActivate($event)"></router-outlet>
-</div>
+<app-container></app-container>
