--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -43,15 +43,14 @@
                         Total : {{ totalPrice |currency:'€' }}
                     </div>
                     <br/>
-                    <div>
-                        <label for="deliveryPartner" class="form-label">Choix du partenaire de livraison</label>
-                        <select class="form-select">
-                            <option selected> -- </option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                          </select>
-                    </div>
+                    <mat-form-field>
+                      <mat-label>Transporteur</mat-label>
+                      <select matNativeControl [(ngModel)]="selectedPartner" name="deliveryPartner" required>
+                        <option *ngFor="let partner of deliveryPartners" [value]="partner.id">
+                          {{ partner.firstname }}
+                        </option>
+                      </select>
+                    </mat-form-field>
 
                 </div>
                 
