--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card shadow my-5">
-            <form #invoiceForm="ngForm"  (ngSubmit)="MarkInvoiceAsPaid(invoiceForm)">
+            <form [formGroup]="invoiceForm"  (ngSubmit)="MarkInvoiceAsPaid()">
                 <h4 class="card-header">Modification du panier</h4>
                 <div class="card-body">
                     <table class="table table-bordered">
@@ -45,7 +45,7 @@
                     <br/>
                     <mat-form-field>
                       <mat-label>Transporteur</mat-label>
-                      <mat-select matNativeControl [(ngModel)]="selectedPartner" name="deliveryPartner" required>
+                      <mat-select matNativeControl formControlName="selectDeliveryPartner" required>
                         <mat-option *ngFor="let partner of deliveryPartners" [value]="partner">
                           {{ partner.firstname }}
                         </mat-option>
@@ -60,6 +60,7 @@
                     <button 
                         type="submit" 
                         class="btn btn-primary"
+                        [disabled]="!invoiceForm.valid || invoice.invoiceItems.length === 0"
                     >
                         Payer
                     </button>
